Refactored modal dialogs.

--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/publish-file-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/publish-file-dialog.html
@@ -1,110 +1,136 @@
-<div class="modal-header">
-	<h2 class="modal-title">{{t.dialog.title}}</h2>
+<div class="row">
+	<div class="col-xs-12">
+		<div class="container padding-xl padding-x padding-y">
+			<h2 class="modal-title">{{t.dialog.title}}</h2>
 
-	<p class="subtitle">{{t.dialog.subtitle}}</p>
+			<p class="subtitle">{{t.dialog.subtitle}}</p>
+		</div>
+	</div>
 </div>
-<div class="modal-body">
-	<div ng-switch="t.dialog.step">
-		<div ng-switch-default>
-			<table class="stretch-horizontal">
-				<colgroup>
-					<col width="150">
-						<col>
-				</colgroup>
-				<tr>
-					<td valign="top">
-						<div class="card no-margin">
-							<div class="file-thumbnail" style="background-image: url({{t.getFileThumbnailUrl(t.entity.uri)}});"></div>
-							<div class="file-name" ng-value="t.getFileNameWithoutExtension(t.file.label)"></div>
-							<div class="file-extension" style="background-color: {{t.file.agentColor}};" ng-value="t.getFileExtension(t.file.label)"></div>
-						</div>
-						<div class="clearfix"></div>
-						<div style="margin-top: 20px; line-height: 32px; vertical-align: middle;">
-							<img class="icn icn-circle pull-left" style="width: 32px; height: 32px; margin-right: 10px;" ng-src="{{t.userPhotoUrl}}" />
-							<label>{{t.user.Name}}</label>
-						</div>
-					</td>
-					<td>
-						<div style="padding: 0 0 0 25px">
-							<div class="form-group">
-								<label class="form-label-top" for="title">Title</label>
-								<input class="form-control stretch-horizontal" type="text" name="title" id="title" ng-model="t.archive.title">
-							</div>
-							<div class="form-group">
-								<label class="form-label-top" for="abstract">Abstract</label>
-								<textarea class="form-control stretch-horizontal" type="text" rows="7" name="abstract" id="abstract" ng-model="t.archive.description"></textarea>
-							</div>
-							<div class="form-group">
-								<label class="form-label-top" for="license">License</label>
-								<select class="form-control" name="license" id="license" ng-options="license.uri as license.label for license in t.archive.licenseOptions" ng-model="t.archive.license">
-								</select>
-							</div>
-							<label>Contents</label>
-							<div class="form-group">
-								<ul class="list-unstyled">
-									<li>
-										<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeFile">
-										<label>File</label>
-									</li>
-									<li>
-										<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeEditingHistory" disabled>
-										<label>Editing History</label>
-									</li>
-									<li>
-										<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeBrowsingHistory">
-										<label>Browsing History</label>
-									</li>
-									<li>
-										<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeComments">
-										<label>Comments</label>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</td>
-				</tr>
-			</table>
-			<div class="modal-footer-buttons text-center">
-				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
-				<button class="btn btn-icn btn-circular btn-success pull-right" ng-click="t.selectAccount()"><i class="zmdi zmdi-arrow-right"></i></button>
+<div ng-switch="t.dialog.step">
+	<div ng-switch-when="no-accounts">
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="layout-container padding-xl padding-x padding-y">
+					<label>Go to <a href="#/settings">Preferences</a> <i class="zmdi zmdi-arrow-right"></i> Accounts to add one.</label>
+				</div>
 			</div>
 		</div>
-		<div ng-switch-when="upload-select-account">
-			<div class="form-group">
-				<select class="form-control stretch-horizontal" name="account" ng-options="account as account.Description for account in t.accounts track by account.Uri" ng-model="t.selectedAccount"></select>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
 			</div>
-
-			<div class="form-group" ng-switch="t.authentication.protocol">
-				<div ng-switch-when="http://localhost:8272/artivity/api/1.0/auth/basic">
-					<label class="form-label-top">Login</label>
-
+		</div>
+	</div>
+	<div ng-switch-when="upload-select-account">
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="layout-container padding-xl padding-x">
 					<div class="form-group">
-						<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="t.authentication.parameter.username" required>
-						<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="t.authentication.parameter.password" ng-enter="beginUpload()" required>
+						<select class="form-control stretch-horizontal" name="account" ng-options="account as account.Description for account in t.accounts track by account.Uri" ng-model="t.selectedAccount"></select>
+					</div>
+					<div class="form-group" ng-switch="t.authentication.protocol">
+						<div ng-switch-when="http://localhost:8272/artivity/api/1.0/auth/basic">
+							<label class="form-label-top">Login</label>
+
+							<div class="form-group">
+								<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="t.authentication.parameter.username" required>
+								<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="t.authentication.parameter.password" ng-enter="t.beginUpload()" required>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="modal-footer-buttons text-center">
-				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
-				<button class="btn btn-icn btn-circular btn-success pull-right" ng-click="t.beginUpload()"><i class="zmdi zmdi-check"></i></button>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn btn-success" ng-click="t.beginUpload()"><i class="zmdi zmdi-check"></i></button>
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
 			</div>
 		</div>
-		<div ng-switch-when="t.upload-progress">
-			<uib-progressbar value="t.progress.PercentComplete" max="100" style="height: 5px"></uib-progressbar>
+	</div>
+	<div ng-switch-when="upload-progress">
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="layout-container padding-xl padding-x">
+					<uib-progressbar value="t.progress.PercentComplete" max="100" style="height: 5px"></uib-progressbar>
 
-			<label>{{t.selectedAccount.Description}}</label>
-			<label class="pull-right">{{t.progress.PercentComplete}}%</label>
-
-			<div class="modal-footer-buttons text-center">
-				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+					<label>{{t.selectedAccount.Description}}</label>
+					<label class="pull-right">{{t.progress.PercentComplete}}%</label>
+				</div>
 			</div>
 		</div>
-		<div ng-switch-when="no-accounts">
-			<label>Go to <a href="#/settings">Preferences</a> <i class="zmdi zmdi-arrow-right"></i> Accounts to add one.</label>
-
-			<div class="modal-footer-buttons text-center">
-				<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div ng-switch-default>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="table-layout">
+					<div class="row">
+						<div class="col" style="width: 230px">
+							<div class="padding-xl padding-x">
+								<div art-file-card file="{{t.file}}" enable-link="false"></div>
+								<div class="clearfix"></div>
+								<div style="margin-top: 20px; line-height: 32px; vertical-align: middle;">
+									<img class="icn icn-circle pull-left" style="width: 32px; height: 32px; margin-right: 10px;" ng-src="{{t.userPhotoUrl}}" />
+									<label>{{t.user.Name}}</label>
+								</div>
+							</div>
+						</div>
+						<div class="col expand">
+							<div class="padding-xl padding-x">
+								<div class="form-group">
+									<label class="form-label-top" for="title">Title</label>
+									<input class="form-control stretch-horizontal" type="text" name="title" id="title" ng-model="t.archive.title">
+								</div>
+								<div class="form-group">
+									<label class="form-label-top" for="abstract">Abstract</label>
+									<textarea class="form-control stretch-horizontal" type="text" rows="7" name="abstract" id="abstract" ng-model="t.archive.description"></textarea>
+								</div>
+								<div class="form-group">
+									<label class="form-label-top" for="license">License</label>
+									<select class="form-control" name="license" id="license" ng-options="license.uri as license.label for license in t.archive.licenseOptions" ng-model="t.archive.license">
+									</select>
+								</div>
+								<label>Additional Contents</label>
+								<div class="form-group">
+									<ul class="list-unstyled">
+										<li>
+											<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeFile">
+											<label>File</label>
+										</li>
+										<li>
+											<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeBrowsingHistory">
+											<label>Browsing History</label>
+										</li>
+										<li>
+											<input class="form-control" type="checkbox" ng-model="t.archive.contentOptions.includeComments">
+											<label>Comments</label>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn btn-success" ng-click="t.selectAccount()"><i class="zmdi zmdi-chevron-right"></i></button>
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
 			</div>
 		</div>
 	</div>
