--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
@@ -1,80 +1,96 @@
-<div class="modal-header">
-	<h2 class="modal-title">{{ title | translate}}</h2>
-</div>
-<div ng-switch="selectedClient.Uri" class="modal-body">
-	<div ng-switch-default>
-		<p class="description">Please select the account type to connect with:</p>
-
-		<ul class="list-view">
-			<li class="list-item" ng-repeat="client in clients">
-				<a ng-click="selectClient(client)" style="cursor: pointer;">
-					<div class="col col-icn col-icn-lg">
-						<i class="zmdi zmdi-account"></i>
-					</div>
-
-					<div class="col expand">
-						<div style="padding: 9px">
-							<h5>{{client.Title}}</h5>
-							<label>{{client.Uri + '.description' | translate}}</label>
-						</div>
-					</div>
-				</a>
-			</li>
-		</ul>
-
-		<div class="modal-footer-buttons text-center">
-			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+<div class="row">
+	<div class="col-xs-12">
+		<div class="container padding-xl padding-x padding-y">
+			<h2 class="modal-title">{{ t.title | translate}}</h2>
 		</div>
 	</div>
-
+</div>
+<div ng-switch="t.selectedClient.Uri">
 	<div ng-switch-when="http://eprints.org">
-		<form name="connectForm" ng-submit="connectAccount(selectedClient)">
-			<p class="description">Please enter the server address, username and password of the repository:</p>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="layout-container padding-xl padding-x">
+					<form name="connectForm" ng-submit="t.connectAccount(selectedClient)">
+						<p class="description">Please enter the server address, username and password of the repository:</p>
 
-			<input type="text" class="form-control" id="url" name="url" placeholder="http://example.org" ng-model="parameter.url" required>
+						<input type="text" class="form-control" id="url" name="url" placeholder="http://example.org" ng-model="t.parameter.url" required>
 
-			<label style="margin-top: .5em;">Login</label>
+						<label style="margin-top: .5em;">Login</label>
 
-			<div class="form-group">
-				<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="parameter.username" required>
-				<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="parameter.password" ui-keypress="{13:'connectAccount(selectedClient)'}" required>
+						<div class="form-group">
+							<input class="form-control form-control-login" type="text" placeholder="Username" id="username" name="username" size="20" maxlength="20" ng-model="t.parameter.username" required>
+							<input class="form-control form-control-login" type="password" placeholder="Password" id="password" name="password" size="20" maxlength="20" ng-model="t.parameter.password" ui-keypress="{13:'t.connectAccount(selectedClient)'}" required>
+						</div>
+					</form>
+
+					<div art-client-state-info state="{{t.clientState}}"></div>
+				</div>
 			</div>
-		</form>
-
-		<div class="modal-footer-buttons text-center">
-			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
-			<button class="btn btn-icn btn-circular btn-success pull-right" type="submit" ng-click="connectAccount(selectedClient)" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < clientState && clientState < 3)"><i class="zmdi zmdi-check"></i></button>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn btn-success" type="t.submit" ng-click="t.connectAccount(selectedClient)" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < t.clientState && t.clientState < 3)"><i class="zmdi zmdi-check"></i></button>
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
+			</div>
 		</div>
 	</div>
 
 	<div ng-switch-when="http://orcid.org">
-		<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="container padding-xl padding-x">
+					<p class="description">Please log into your ORCiD account and allow Artivity to be connected:</p>
+				</div>
 
-		<iframe ng-src="{{clientUrl}}" style="min-height: 400px; width: 100%;"></iframe>
+				<iframe ng-src="{{t.clientUrl}}" style="background: white; min-height: 400px; width: 100%;"></iframe>
 
-		<div class="modal-footer-buttons text-center">
-			<button class="btn btn-icn btn-circular no-margin pull-right" ng-click="cancel()"><i class="zmdi zmdi-close"></i></button>
+				<div class="container padding-xl padding-x">
+					<div art-client-state-info state="{{t.clientState}}"></div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<div ng-switch="clientState" class="modal-status-bar">
-		<div ng-switch-when="1" class="modal-state" style="background-color: #3694c3;">
-			<div class="pull-center">
-				<div class="spinner connecting">
-					<div class="rect1"></div>
-					<div class="rect2"></div>
-					<div class="rect3"></div>
-				</div> Connecting..
+	<div ng-switch-default>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="layout-container padding-xl padding-x">
+					<p class="description">Please select the account type to connect with:</p>
+
+					<ul class="list-view">
+						<li class="list-item" ng-repeat="client in t.clients">
+							<a ng-click="t.selectClient(client)" style="cursor: pointer;">
+								<div class="col col-icn col-icn-lg">
+									<i class="zmdi zmdi-account"></i>
+								</div>
+
+								<div class="col expand">
+									<div style="padding: 9px">
+										<h5>{{client.Title}}</h5>
+										<label>{{client.Uri + '.description' | translate}}</label>
+									</div>
+								</div>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-		<div ng-switch-when="2" class="modal-state" style="background-color: #849324;">
-			<i class="zmdi zmdi-check zmdi-sm"></i> Authorization successful.
-		</div>
-		<div ng-switch-when="3" class="modal-state" style="background-color: #EB7414;">
-			<i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Wrong username or password.
-		</div>
-		<div ng-switch-when="4" class="modal-state" style="background-color: #EB7414;">
-			<i class="zmdi zmdi-alert-triangle zmdi-sm"></i> Connection error.
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="toolbar pull-right">
+					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
