--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/add-account-dialog.html
@@ -30,7 +30,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="toolbar pull-right">
-					<button class="btn btn-success" type="t.submit" ng-click="t.connectAccount(selectedClient)" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < t.clientState && t.clientState < 3)"><i class="zmdi zmdi-check"></i></button>
+					<button class="btn btn-success" type="submit" ng-click="t.connectAccount(selectedClient)" ng-disabled="connectForm.url.$invalid || connectForm.username.$invalid || connectForm.password.$invalid || (0 < t.clientState && t.clientState < 3)"><i class="zmdi zmdi-check"></i></button>
 					<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
 				</div>
 			</div>
