Layer visibility can now be toggled.

--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -76,6 +76,9 @@ iframe {
 .accent-color {
   color: #F27200; }
 
+.translucent {
+  opacity: .5; }
+
 .msg-error {
   display: block;
   width: 100%;
@@ -104,11 +107,6 @@ iframe {
 .animate-show.ng-hide-add-active,
 .animate-show.ng-hide-remove-active {
   transition: 1s linear all; }
-
-.disabled {
-  -webkit-filter: grayscale(100%);
-  -moz-filter: grayscale(100%);
-  filter: grayscale(100%); }
 
 .tooltip > .tooltip-inner {
   background-color: #EEEEEE;
@@ -166,6 +164,9 @@ input.disabled,
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none; }
+
+.btn.padding-sm {
+  padding: 3px 6px; }
 
 button:hover,
 .btn:hover,
@@ -351,6 +352,11 @@ button:focus,
 
 .list-item .col.expand {
   width: 100%; }
+
+.list-item .col.disabled {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%); }
 
 .list-item .col-icn {
   vertical-align: middle;
